samples/_failures_safe/1761692335_0542be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b48fce7.c: In function ‘main’:
./samples/SAFE/__tmp_1b48fce7.c:139:13: error: ‘MATRIX_’ undeclared (first use in this function); did you mean ‘MATRIX_ADD’?
  139 |             MATRIX_
      |             ^~~~~~~
      |             MATRIX_ADD
./samples/SAFE/__tmp_1b48fce7.c:139:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1b48fce7.c:139:20: error: expected ‘;’ at end of input
  139 |             MATRIX_
      |                    ^
      |                    ;
./samples/SAFE/__tmp_1b48fce7.c:139:13: error: expected declaration or statement at end of input
  139 |             MATRIX_
      |             ^~~~~~~
./samples/SAFE/__tmp_1b48fce7.c:139:13: error: expected declaration or statement at end of input
